--- a/style.css
+++ b/style.css
@@ -1,52 +1,44 @@
 *{
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+	box-sizing:content-box;
 }
 
 html{
 	font-size: 10px;
-	font-family: "Roboto Cn", sans-serif;
-}
-body{
-	margin: 0;
-	padding: 0;
+	height: 100%;
 }
 
 a{
 	text-decoration: none;
 	color: #eee;
 }
-
+/****NAVBAR*****/
 header{
 	width: 100%;
-	height: 100vh;
-	background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.5)), url("Images/bg.jpg") center no-repeat;
-	background-size: cover;
+	height: 8rem;
+	margin: 0 auto;
+	padding: 0;
 	position: relative;
-  overflow: hidden;
+	overflow: hidden;
+	font-size: 10px;
+	font-family: "Roboto Cn", sans-serif;
 }
+.banner-area{
+	width:100%;
+	height:100vh;
+	background:linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.5)), url("Images/bg.jpg") center no-repeat;
+	background-size:cover;
+}        
 
 .navbar{
-	min-width: none;
 	max-width: 120em;
 	width: 100%;
 	justify-content: space-around;
 }
 
-.toggle-button{
-	position: fixed;
-	top: 2.5rem;
-	right: 2.5rem;
-	color: #eeeeee;
-	font-size: 3rem;
-	cursor: pointer;
-	z-index: 1000;
-	display: none;
-}
-
 nav{
-	padding-top: 2rem;
+	padding-top: 3rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -69,19 +61,19 @@ nav ul li:nth-child(1){
 }
 
 nav ul li:nth-child(2){
-	animation-delay: .5s;
+	animation-delay: .2s;
 }
 
 nav ul li:nth-child(3){
-	animation-delay: 1s;
+	animation-delay: 0.4s;
 }
 
 nav ul li:nth-child(4){
-	animation-delay: 1.5s;
+	animation-delay: 0.6s;
 }
 
 nav ul li:nth-child(5){
-	animation-delay: 1.5s;
+	animation-delay: 0.8s;
 }
 
 nav ul li a{
@@ -123,19 +115,7 @@ nav ul li a::after{
 	bottom: 0;
 	transform-origin: right;
 }
-
-.overlay{
-	background-color: rgba(0,0,0,.95);
-	position: fixed;
-	right: 0;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	transition: opacity 650ms;
-	transform: scale(0);
-	opacity: 0;
-  display: none;
-}
+  
 
 nav ul li a:hover::before,
 nav ul li a:hover::after{
@@ -150,41 +130,199 @@ nav ul li a:hover::after{
 		transform: translateX(0);
 	}
 }
+/*IMPLEMENT LATER FOR RESPONSIVE NAVBAR*/
+.hamburger{
+	margin: 0 auto;
+	height: auto;
+}
+.hamburger .line{
+	width: 4rem;
+	justify-content: left;
+	height: 0.2rem;
+	background-color: #ecf0f1;
+	display: none;
+	margin: 2rem auto;
+	-webkit-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+  }
 
-@media screen and (max-width: 700px){
+  .hamburger:hover{
+	cursor: pointer;
+  }
 
-	.navbar{
-		display: block;
-	}
-
-	nav{
-		padding-top: 0;
-		display: none;
-		flex-direction: column;
-		justify-content: space-evenly;
-		align-items: center;
-		height: 100vh;
-		text-align: center;
-	}
-
-	nav ul{
-		flex-direction: column;
-	}
-
-	nav ul li{
-		margin-top: 5rem;
-	}
-
-	nav ul li a{
-		margin: 0;
-		font-size: 2.5rem;
-	}
-
-  .overlay.menu-open,
-  nav.menu-open{
-	  display: flex;
-	  transform: scale(1);
-	  opacity: 1;
+  #hamburger-0.is-active{
+	-webkit-transform: rotate(90deg);
+	-ms-transform: rotate(90deg);
+	-o-transform: rotate(90deg);
+	transform: rotate(90deg);
   }
   
+  #hamburger-0.is-active .line:nth-child(2){
+	-webkit-transition: none;
+	-o-transition: none;
+	transition: none;
+  }
+  
+  #hamburger-0 .line:nth-child(2){
+	-webkit-transition-delay: 0.3s;
+	-o-transition-delay: 0.3s;
+	transition-delay: 0.3s;
+  }
+  
+  
+  #hamburger-0.is-active .line:nth-child(2){
+	opacity: 0;
+  }
+  
+  #hamburger-0.is-active .line:nth-child(1),
+  #hamburger-0.is-active .line:nth-child(3){
+	width: 35px;
+	-webkit-transform-origin: right;
+	-moz-transform-origin: right;
+	-ms-transform-origin: right;
+	-o-transform-origin: right;
+	transform-origin: right;
+  }
+  
+  #hamburger-0.is-active .line:nth-child(1){
+	-webkit-transform: translateY(15rem) rotate(45deg);
+	-ms-transform: translateY(15rem) rotate(45deg);
+	-o-transform: translateY(15rem) rotate(45deg);
+	transform: translateY(15rem) rotate(45deg);
+  }
+  
+  #hamburger-0.is-active .line:nth-child(3){
+	-webkit-transform: translateY(-15rem) rotate(-45deg);
+	-ms-transform: translateY(-15rem) rotate(-45deg);
+	-o-transform: translateY(-15rem) rotate(-45deg);
+	transform: translateY(-15rem) rotate(-45deg);
+  }
+  @media screen and (max-width: 700px){
+	  
+	  .navbar{
+		  display: flex;
+		}
+		.hamburger{
+			justify-content: left;
+		}
+		.hamburger .line{
+			display: flex;
+		}
+		
+		nav{
+			padding-top: 0;
+			display: none;
+			flex-direction: column;
+			justify-content: space-evenly;
+			align-items: center;
+			height: 100vh;
+			text-align: center;
+		}
+		
+		nav ul{
+			flex-direction: column;
+		}
+		
+		nav ul li{
+			margin-top: 5rem;
+		}
+		
+		nav ul li a{
+			margin: 0;
+			font-size: 2.5rem;
+		}
+		
+		nav.menu-open{
+			display: flex;
+			transform: scale(1);
+			opacity: 1;
+		}
+		
+	}
+	/***Hamburger not edible***/
+	
+	/******HEADING******/
+	
+	/* Heading for my name */
+	.heading{
+		height: 600px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+/**********************/
+
+/* resume icon */
+.resume{
+    margin: 15px 0px;
+}
+.resume>a>img{
+    padding:15px;
+    margin:0px 5px;
+	border: 2px dotted inset green;
+    border-radius: 40%;
+    border: 2px inset;
+    font-size:30px;
+    transition: all 0.7s ease;
+}
+.resume>a>img:hover{
+    border: 2px dotted white;
+    color:rgb(31,37,58);
+    font-size:35px;
+	transition: scale(1);
+	cursor:pointer;
+}
+.left >h2 {
+    color: white;
+    font-size:35px;
+    margin:10px 0px;
+
+}
+.left >p {
+    color: white;
+    font-size:20px;
+    margin:5px 0px;
+    width: 500px;
+}
+/**********************************/
+
+/* Let's connect button */
+.biolink{
+    width: 180px;
+    height: 50px;
+    border: 2px dotted inset white;
+	border-radius: 40%;
+    background-color: transparent;
+    color: white;
+    font-size:18px;
+    border-radius: 20px;
+    font-weight: bold;
+    margin:7px 0px;
+    transition: all 0.7s ease;
+}
+.biolink:hover{
+    border: 2px dotted crimson;
+    cursor: pointer;
+	
+}
+
+/* Profile picture */
+.profilepic{
+    border:8px outset green;
+	width: 34rem;
+	height: 34rem;
+    border-radius:50%;
+    overflow: hidden;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    flex-wrap: wrap;
+    transition: all 0.5s ease;
+}
+.profilepic:hover{
+    border: 5px inset crimson;
+
 }
