--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header{
 .banner-area{
 	width:100%;
 	height:100vh;
-	background:linear-gradient(to bottom, rgba(20, 71, 80, 0.103), rgba(0,0,0,.5)), url("Images/bg.jpg") center no-repeat;
+	background:linear-gradient(to bottom, rgba(0, 0, 0, 0.685), rgba(0, 0, 0, 0.5)), url("Images/bg.jpg") center no-repeat;
 	background-size:cover;
 }        
 
