--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,5 +1,5 @@
 nav{
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.319);
     width: max-content;
     display: block;
     padding: 0.7rem 1.7rem;
@@ -12,6 +12,7 @@ nav{
     gap: 0.8rem;
     border-radius: 3rem;
     backdrop-filter: blur(10px);
+    scroll-behavior: smooth;
 }
 
 nav a{
